examples/test/testpolicy7244.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7244
  namespace: namespace77
spec:
  podSelector:
    matchLabels:
      key3: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value34
          key28: value27
          key11: value17
      podSelector:
        matchLabels:
          key20: value47
          key49: value43
